Align primary wallet and make primary wallet and fix ui bugs

--- a/src/components/CopyToClipboard/CopyToClipboard.scss
+++ b/src/components/CopyToClipboard/CopyToClipboard.scss
@@ -20,10 +20,13 @@
   }
 
   button {
+    position: relative;
     min-width: auto;
     padding: 0rem 0.5rem;
     outline: none;
     border: none;
+    cursor: pointer;
+    z-index: 10;
   }
 
   svg {
@@ -43,6 +46,7 @@
       font-size: 1.2rem;
       color: $primary-main;
       background-color: $grey-blue;
+      white-space: nowrap;
 
       @include mobile {
         top: 0;
