--- a/src/components/ManageWallets/ManageWallets.scss
+++ b/src/components/ManageWallets/ManageWallets.scss
@@ -43,7 +43,7 @@
       padding-bottom: 1.6rem;
     }
     display: flex;
-    align-items: center;
+    // align-items: center;
 
     > img {
       width: 6rem;
@@ -78,8 +78,9 @@
         margin-right: 2.4rem;
         font-size: 1.1rem;
         color: $primary-main;
-        padding: 5px 10px;
+        padding: 3px 10px;
         cursor: default;
+        margin-top: auto;
       }
 
       > button {
@@ -91,7 +92,7 @@
         margin-right: 2.4rem;
         transition: color 0.2s;
         background-color: $grey-blue;
-        padding: 5px 10px;
+        padding: 3px 10px;
         transition: all 0.2s;
 
         &:hover {
@@ -193,6 +194,10 @@
 
       > button {
         margin-right: 0;
+
+        > span {
+          margin-right: 0;
+        }
 
         &:hover {
           background-color: $primary-main;
